# PinnacleMM

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  ROADMAP.md  cleanup.sh  main.cpp  run-docker.sh  run-native.sh
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  docker-test.yml  pr-title-lint.yml  pre-commit.yml  release.yml
config/: default_config.json  ml_config.json
core/instrument/: InstrumentManager.cpp  InstrumentManager.h  ResourceAllocator.cpp  ResourceAllocator.h
core/orderbook/: LockFreeOrderBook.cpp  LockFreeOrderBook.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h
core/persistence/: PersistenceManager.cpp  PersistenceManager.h
core/persistence/journal/: Journal.cpp  Journal.h  JournalEntry.cpp  JournalEntry.h
core/persistence/snapshot/: SnapshotManager.cpp  SnapshotManager.h
core/risk/: AlertManager.cpp  AlertManager.h  CircuitBreaker.cpp  CircuitBreaker.h  DisasterRecovery.cpp  DisasterRecovery.h  RiskConfig.h  RiskManager.cpp  RiskManager.h  VaREngine.cpp  VaREngine.h
core/routing/: OrderRouter.cpp  OrderRouter.h
core/utils/: AuditLogger.cpp  AuditLogger.h  CertificatePinner.cpp  CertificatePinner.h  DomainTypes.h  InputValidator.cpp  InputValidator.h  JsonLogger.cpp  JsonLogger.h  LockFreeOrderBook.cpp  LockFreeOrderBook.h  LockFreeQueue.h  ObjectPool.h  RateLimiter.cpp  RateLimiter.h  SecureInput.cpp  SecureInput.h  ThreadAffinity.cpp  ThreadAffinity.h  TimeUtils.cpp  TimeUtils.h
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
docs/: ADVANCED_BACKTESTING.md  BACKTESTING_AND_ML_TRAINING.md  CROSS_EXCHANGE_ARBITRAGE.md  CROSS_MARKET_CORRELATION.md  DISASTER_RECOVERY.md  FIX_INTEGRATION_SUMMARY.md  FIX_PROTOCOL_INTEGRATION.md  IB_TESTING_GUIDE.md  KUBERNETES_DEPLOYMENT.md  MARKET_IMPACT_PREDICTION.md  MARKET_REGIME_DETECTION.md  ML_SPREAD_OPTIMIZATION.md  MULTI_INSTRUMENT_GUIDE.md  ORDER_BOOK_FLOW_ANALYSIS.md  ORDER_ROUTING.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_2_COMPLETION.md  RISK_MANAGEMENT.md  RL_PARAMETER_ADAPTATION.md  ROADMAP.md  STRATEGY_PERFORMANCE_VISUALIZATION.md  TESTING_GUIDE.md  WEBSOCKET_TESTING.md  performance_baseline.json
docs/api/: reference.md
docs/architecture/: persistence.md  system_overview.md
docs/exchange/: connector_guide.md
docs/security/: CERTIFICATE_PINNING.md  credentials.md
docs/user_guide/: getting_started.md  recovery.md
exchange/connector/: ExchangeConnectorFactory.cpp  ExchangeConnectorFactory.h  SecureConfig.cpp  SecureConfig.h  WebSocketMarketDataFeed.cpp  WebSocketMarketDataFeed.cpp.original  WebSocketMarketDataFeed.h  WebSocketMarketDataFeedStub.cpp  WebSocketStub.h
exchange/fix/: FixConnector.cpp  FixConnector.h  FixConnectorFactory.cpp  FixConnectorFactory.h  InteractiveBrokersFixConnector.cpp  InteractiveBrokersFixConnector.h
exchange/simulator/: ExchangeSimulator.cpp  ExchangeSimulator.h  MarketDataFeed.cpp  MarketDataFeed.h
research/: research.md
scripts/: cleanup.sh  extract_cert_pin.sh  run-docker.sh  run-native.sh
src/: main.cpp
strategies/analytics/: CrossMarketCorrelation.cpp  CrossMarketCorrelation.h  MarketImpactPredictor.cpp  MarketImpactPredictor.h  MarketRegimeDetector.cpp  MarketRegimeDetector.h  OrderBookAnalyzer.cpp  OrderBookAnalyzer.h
strategies/arbitrage/: ArbitrageDetector.cpp  ArbitrageDetector.h  ArbitrageExecutor.cpp  ArbitrageExecutor.h
strategies/backtesting/: BacktestEngine.cpp  BacktestEngine.h
strategies/basic/: BasicMarketMaker.cpp  BasicMarketMaker.h  MLEnhancedMarketMaker.cpp  MLEnhancedMarketMaker.h
strategies/config/: StrategyConfig.cpp  StrategyConfig.h
strategies/ml/: MLSpreadOptimizer.cpp  MLSpreadOptimizer.h
strategies/rl/: RLParameterAdapter.cpp  RLParameterAdapter.h
tests/: fix_basic_test.cpp  fix_message_test.cpp  routing_test.cpp
tests/integration/: MLIntegrationTest.cpp
tests/performance/: BacktestingBenchmark.cpp  LatencyBenchmark.cpp  MLSpreadOptimizationBenchmark.cpp  MarketImpactPredictionBenchmark.cpp  MultiInstrumentBenchmark.cpp  OrderBookBenchmark.cpp  OrderRoutingBenchmark.cpp  RiskCheckBenchmark.cpp  ThroughputBenchmark.cpp
tests/unit/: AlertManagerTests.cpp  ArbitrageDetectorTests.cpp  BacktestEngineTests.cpp  CertificatePinnerTest.cpp  CircuitBreakerTests.cpp  CrossMarketCorrelationTests.cpp  DisasterRecoveryTests.cpp  ExecutionTests.cpp  InstrumentManagerTests.cpp  LockFreeOrderBookTests.cpp  MLEnhancedMarketMakerTests.cpp  MLSpreadOptimizerTests.cpp  MarketImpactPredictorTests.cpp  MarketRegimeDetectorTests.cpp  OrderBookAnalyzerTests.cpp  OrderBookTests.cpp  RLParameterAdapterTests.cpp  RiskManagerTests.cpp  StrategyTests.cpp  VaREngineTests.cpp
visualization/: WebServer.cpp  WebServer.h
visualization/static/: Index.html  app.js  live_dashboard.html  styles.css
